New : update about page

--- a/src/pages/page-about/index.fr.mdx
+++ b/src/pages/page-about/index.fr.mdx
@@ -72,6 +72,7 @@ La vision artistique et l’engagement de Maxime ont été récompensés par de 
 - _[Let’s Draw](/livedrawing#content)_, **Ballina Arts Centre** <span style={{color:"dimgray"}}> — Ballina, Irlande, Septembre 2024</span>
 - _[The Invisible Party](/the-invisible-party#content)_, **[Enter Art Fair](https://www.enterartfair.com/)** <span style={{color:"dimgray"}}> — Copenhague, Danemark, Août 2024</span>
 - _Nos Jogos Olimpicos_, **[Instituto Reaçaō](https://institutoreacao.org.br/)** <span style={{color:"dimgray"}}> — Brésil, 12 villes en simultané, Mai - Août 2024</span>
+- _Oeuvre de commande_, **[Grand Palais Immersif](https://grandpalais-immersif.fr/)** <span style={{color:"dimgray"}}> — Paris, 2024</span>
 - _[Let’s Draw](/livedrawing#content)_, **Novembre Numérique** <span style={{color:"dimgray"}}> — Santiago, République Dominicaine, Décembre 2023</span>
 - _[Painting Mirror](/painting-mirror#content)_, **[Museo de Arto Moderno, Bogota](https://www.mambogota.com/en/)** <span style={{color:"dimgray"}}> — Bogota, Colombie, Novembre 2023</span>
 - _[Let’s Draw](/livedrawing#content)_, **[Voltaje Salón de Arte y Tecnología](https://voltaje.co/)** <span style={{color:"dimgray"}}> — Bogota, Colombie, Novembre 2023</span>
