--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -72,6 +72,7 @@ Through his art, tools, and philosophy of sharing, Maxime uses technology to fos
 - _[Let’s Draw](/livedrawing#content)_, **Ballina Arts Centre** <span style={{color:"dimgray"}}> — Ballina, Ireland, September 2024</span>
 - _[The Invisible Party](/the-invisible-party#content)_, **[Enter Art Fair](https://www.enterartfair.com/)** <span style={{color:"dimgray"}}> — Copenhagen, Denmark, August 2024</span>
 - _Nos Jogos Olimpicos_, **[Instituto Reaçaō](https://institutoreacao.org.br/)** <span style={{color:"dimgray"}}> — Brazil, 12 cities simultaneously, May - August 2024</span>
+- _Commissioned work_, **[Grand Palais Immersif](https://grandpalais-immersif.fr/)** <span style={{color:"dimgray"}}> — Paris, 2024</span>
 - _[Let’s Draw](/livedrawing#content)_, **Novembre Numérique** <span style={{color:"dimgray"}}> — Santiago, Dominican Republic, December 2023</span>
 - _[Painting Mirror](/painting-mirror#content)_, **[Museo de Arte Moderno, Bogotá](https://www.mambogota.com/en/)** <span style={{color:"dimgray"}}> — Bogotá, Colombia, November 2023</span>
 - _[Let’s Draw](/livedrawing#content)_, **[Voltaje Salón de Arte y Tecnología](https://voltaje.co/)** <span style={{color:"dimgray"}}> — Bogotá, Colombia, November 2023</span>
