--- a/src/pages/page-about/index.fr.mdx
+++ b/src/pages/page-about/index.fr.mdx
@@ -67,7 +67,7 @@ La vision artistique et l’engagement de Maxime ont été récompensés par de 
 - _[Let’s Draw](/livedrawing#content)_, **[Fête des Lumières de Lyon](https://www.fetedeslumieres.lyon.fr/fr)** <span style={{color:"dimgray"}}> — Lyon, France, Décembre 2024</span>
 - _Sensory Overload_, **ROM After Dark, [Royal Ontario Museum](https://www.rom.on.ca/)** <span style={{color:"dimgray"}}> — Toronto, Canada, Novembre 2024</span>
 - _Mosaïques_, **[Festival de la Francophonie](https://francophonie2024.gouv.fr/refaire-le-monde-le-festival-de-la-francophonie/index.html), [104](https://www.104.fr/)** <span style={{color:"dimgray"}}> — Paris, Octobre 2024</span>
-- _[Painting Mirror](/painting-mirror#content) façon impressionistes_, **[National Gallery of Ireland](https://www.nationalgallery.ie/)** <span style={{color:"dimgray"}}> — Dublin, Irlande, Septembre 2024</span>
+- _[Painting Mirror](/painting-mirror#content) façon impressionnistes_, **[National Gallery of Ireland](https://www.nationalgallery.ie/)** <span style={{color:"dimgray"}}> — Dublin, Irlande, Septembre 2024</span>
 - _[Let’s Draw](/livedrawing#content)_, **Galway City** <span style={{color:"dimgray"}}> — Galway, Irlande, Septembre 2024</span>
 - _[Let’s Draw](/livedrawing#content)_, **Ballina Arts Centre** <span style={{color:"dimgray"}}> — Ballina, Irlande, Septembre 2024</span>
 - _[The Invisible Party](/the-invisible-party#content)_, **[Enter Art Fair](https://www.enterartfair.com/)** <span style={{color:"dimgray"}}> — Copenhague, Danemark, Août 2024</span>
