New : revamp letsdraw page

--- a/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
+++ b/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
@@ -3,26 +3,76 @@ path: /livedrawing
 layout: article
 category: portfolio
 language: fr
-title: Live Drawing Project
-subtitle: Mapping Interactif, Dessin
+title: Let's Draw
+subtitle: Mapping, Dessin collectif
 tags: mapping
-description: Projet d'art numérique explorant les possibilités de dessin participatif et collectif en temps réel.
+description: Oeuvre participative explorant les possibilités de dessin collectif en temps réel.
 date: '2020-01-01'
-image: 20220709-AAA_0030.jpg
-priority: 1
+image: Corsica_AAA_0030©MaximeTouroute.jpg
+priority: 0
 embeddedImagesLocal:
-  - 26v_2_webw.jpg
-  - web-6.jpg
-  - web-11.jpg
-  - web-21.jpg
-  - web-14.jpg
-  - SprayingBoard_7.jpg
-  - web-23.jpg
-  - b.jpg
-  - 6.jpg
+  - Dublin_FE51©DoraKazmierak.jpg
+  - Dublin_FE52_©DoraKazmierak.jpg
+  - Calgary_©MaximeTouroute.jpg
+  - Calgary_3©MaximeTouroute.jpg
+  - Calgary_6©MaximeTouroute.jpg
+  - Galway_Performers_DSCF0145©MaximeTouroute.jpg
+  - Galway_PXL_20240920_194536836©MaximeTouroute.jpg
+  - Galway_PXL_20240920_221359071©MaximeTouroute.jpg
+  - Noiroutier_PXL_20241229_184037272©MaximeTouroute.jpg
+  - Troyes_©MaximeTouroute.jpg
+  - Copenhague_CNS_0579©MaximeTouroute.jpg
+  - Copenhague_©MaximeTouroute.jpg
+  - Copenhague2_©MaximeTouroute.jpg
+  - Immersive_©MaximeTouroute.jpg
+  - Lyon_©MaximeTouroute_SetDesign©LouisClement.jpg
+  - Paris_©MaximeTouroute.jpg
 ---
 
-<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />
 
-Projet d'art numérique explorant les possibilités de dessin participatif et collectif en temps réel.  
-Plus d'informations sur le site officiel [Live Drawing Project](//thelivedrawingproject.com).
+Une œuvre participative où le public est invité à dessiner en direct sur les murs. Massivement interactive, chacun.e peut participer simultanément en dessinant avec son propre téléphone.
+
+![Corsica_AAA_0030©MaximeTouroute.jpg](Corsica_AAA_0030©MaximeTouroute.jpg)
+
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[0, 1]} gridSize={2} />
+
+_En exploitant la technologie pour amplifier la création collective, Let’s Draw révèle nos imaginaires collectifs autour de thèmes universels : Comment dessiner un arbre ? Comment dessiner l’amour ? Comment dessiner notre monde ?_
+
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[2,3,4,5,6,7]} gridSize={3} />
+
+_C’est une création qui s’exprime autant sur la façade que dans la foule : les publics de tous âges dessinent, réagissent, regardent leurs dessins et ceux des autres dans une ambiance collective conviviale. Les artistes locaux rejoignent le projet et performent en direct._
+
+<ResponsiveIframe
+  src="https://youtube.com/embed/WCcYfjHkraQ"
+  width="1920"
+  height="1080"
+/>
+<br/>
+<ResponsiveIframe src="https://player.vimeo.com/video/1042920262" width="1920" height="1080"/>
+
+
+
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[8,9]}  gridSize={2} />
+
+
+
+_L'oeuvre s'adapte à tous les contextes, du mapping sur batiment historique à la façade de parking - de l'événement ponctuel à l'exposition permanente._
+
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[10,11,12,13,14, 15]}  gridSize={3} />
+
+
+
+### Selection d'expositions
+_80+ expositions à travers 10 pays_
+- **[Fête des Lumières de Lyon](//www.fetedeslumieres.lyon.fr/fr)** <span style={{color:"dimgray"}}> — Lyon, France, Décembre 2024</span>
+- **Galway City** <span style={{color:"dimgray"}}> — Galway, Irlande, Septembre 2024</span>
+- **[Ballina Arts Centre](//ballinaartscentre.com/)** <span style={{color:"dimgray"}}> — Ballina, Irlande, Septembre 2024</span>
+- **Novembre Numérique** <span style={{color:"dimgray"}}> — Santiago, République Dominicaine, Décembre 2023</span>
+- **[Voltaje Salón de Arte y Tecnología](//voltaje.co/)** <span style={{color:"dimgray"}}> — Bogota, Colombie, Novembre 2023</span>
+- **[Festi Lumi](//www.festilumi.fr/)** <span style={{color:"dimgray"}}> — Bonifacio, Corse, Juillet 2023</span>
+- **Festival Pléiades** <span style={{color:"dimgray"}}> — Saint-Etienne, France, Novembre 2022</span>
+- **[National Gallery of Ireland](//www.nationalgallery.ie/)** <span style={{color:"dimgray"}}> — Dublin, Irlande, Septembre 2020 et 2021</span>
+- **[Copenhagen Light Festival](//copenhagenlightfestival.org/en/)** <span style={{color:"dimgray"}}> — Copenhague, Danemark, Février 2020</span>
+
+### Dossier artistique
+Sur demande, [contact@maximetouroute.com](mailto:ontact@maximetouroute.com)
