--- a/src/pages/2018-11-30-the-live-drawing-project/index.mdx
+++ b/src/pages/2018-11-30-the-live-drawing-project/index.mdx
@@ -3,26 +3,74 @@ path: /livedrawing
 layout: article
 category: portfolio
 language: en
-title: Live Drawing Project
-subtitle: Collaborative Drawing
+title: Let's Draw
+subtitle: Mapping, Collaborative Drawing
 tags: mapping
-description: A digital arts project about experiencing the possibilities of collaborative and live drawing.
+description: Artwork exploring the possibilities of collaborative and live drawing.
 date: '2020-01-01'
-image: 20220709-AAA_0030.jpg
-priority: 1
+image: Corsica_AAA_0030©MaximeTouroute.jpg
+priority: 0
 embeddedImagesLocal:
-  - 26v_2_webw.jpg
-  - web-6.jpg
-  - web-11.jpg
-  - web-21.jpg
-  - web-14.jpg
-  - SprayingBoard_7.jpg
-  - web-23.jpg
-  - b.jpg
-  - 6.jpg
+  - Dublin_FE51©DoraKazmierak.jpg
+  - Dublin_FE52_©DoraKazmierak.jpg
+  - Calgary_©MaximeTouroute.jpg
+  - Calgary_3©MaximeTouroute.jpg
+  - Calgary_6©MaximeTouroute.jpg
+  - Galway_Performers_DSCF0145©MaximeTouroute.jpg
+  - Galway_PXL_20240920_194536836©MaximeTouroute.jpg
+  - Galway_PXL_20240920_221359071©MaximeTouroute.jpg
+  - Noiroutier_PXL_20241229_184037272©MaximeTouroute.jpg
+  - Troyes_©MaximeTouroute.jpg
+  - Copenhague_CNS_0579©MaximeTouroute.jpg
+  - Copenhague_©MaximeTouroute.jpg
+  - Copenhague2_©MaximeTouroute.jpg
+  - Immersive_©MaximeTouroute.jpg
+  - Lyon_©MaximeTouroute_SetDesign©LouisClement.jpg
+  - Paris_©MaximeTouroute.jpg
 ---
 
-<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} />
+A participatory artwork where the public is invited to draw live on walls. Massively interactive, everyone can participate simultaneously by drawing with their phone.
 
-A digital arts project about experiencing the possibilities of collaborative and live drawing.
-More informations about it on the official website [Live Drawing Project](//thelivedrawingproject.com).
+![Corsica_AAA_0030©MaximeTouroute.jpg](Corsica_AAA_0030©MaximeTouroute.jpg)
+
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[0, 1]} gridSize={2} />
+
+_By leveraging technology to amplify collaborative creation, Let’s Draw reveals our shared imagination around universal themes: How do we draw a tree? How do we draw love? How do we draw our world?_
+
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[2,3,4,5,6,7]} gridSize={3} />
+
+_A creation that comes alive both on the facade and within the crowd, as participants of all ages draw, react, and engage with their own creations and those of others in a convivial and collective atmosphere.
+Local artists join the project and perform in live._
+
+<ResponsiveIframe
+  src="https://youtube.com/embed/WCcYfjHkraQ"
+  width="1920"
+  height="1080"
+/>
+<br/>
+<ResponsiveIframe src="https://player.vimeo.com/video/1042920262" width="1920" height="1080"/>
+
+
+
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[8,9]}  gridSize={2} />
+
+_The artwork adapts to all kinds of situations, from heritage building to parking façades - from one-shot events to permanent exhibitions._
+
+<ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[10,11,12,13,14, 15]}  gridSize={3} />
+
+
+
+### Selected exhibitions
+_80+ exhibitions in 10 countries_
+- **[Fête des Lumières de Lyon](//www.fetedeslumieres.lyon.fr/fr)** <span style={{color:"dimgray"}}> — Lyon, France, December 2024</span>
+- **Galway City** <span style={{color:"dimgray"}}> — Galway, Irlande, September 2024</span>
+- **[Ballina Arts Centre](//ballinaartscentre.com/)** <span style={{color:"dimgray"}}> — Ballina, Irlande, September 2024</span>
+- **Digital November** <span style={{color:"dimgray"}}> — Santiago, République Dominicaine, Décembre 2023</span>
+- **[Voltaje Salón de Arte y Tecnología](//voltaje.co/)** <span style={{color:"dimgray"}}> — Bogota, Colombie, November 2023</span>
+- **[Festi Lumi](//www.festilumi.fr/)** <span style={{color:"dimgray"}}> — Bonifacio, Corse, July 2023</span>
+- **Pléiades Festival** <span style={{color:"dimgray"}}> — Saint-Etienne, France, November 2022</span>
+- **[National Gallery of Ireland](//www.nationalgallery.ie/)** <span style={{color:"dimgray"}}> — Dublin, Irlande, September 2020 & 2021</span>
+- **[Copenhagen Light Festival](//copenhagenlightfestival.org/en/)** <span style={{color:"dimgray"}}> — Copenhague, Danemark, February 2020</span>
+
+### Documentation
+Upon request [contact@maximetouroute.com](mailto:ontact@maximetouroute.com)
