New : slight updates

--- a/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
+++ b/src/pages/2018-11-30-the-live-drawing-project/index.fr.mdx
@@ -36,11 +36,15 @@ Une œuvre participative où le public est invité à dessiner en direct sur les
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[0, 1]} gridSize={2} />
 
-_En exploitant la technologie pour amplifier la création collective, Let’s Draw révèle nos imaginaires collectifs autour de thèmes universels : Comment dessiner un arbre ? Comment dessiner l’amour ? Comment dessiner notre monde ?_
+En exploitant la technologie pour amplifier la création collective, Let’s Draw révèle nos imaginaires collectifs autour de thèmes universels : Comment dessiner un arbre ? Comment dessiner l’amour ? Comment dessiner notre monde ?
+
+<br/>
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[2,3,4,5,6,7]} gridSize={3} />
 
-_C’est une création qui s’exprime autant sur la façade que dans la foule : les publics de tous âges dessinent, réagissent, regardent leurs dessins et ceux des autres dans une ambiance collective conviviale. Les artistes locaux rejoignent le projet et performent en direct._
+C’est une création qui s’exprime autant sur la façade que dans la foule : les publics de tous âges dessinent, réagissent, regardent leurs dessins et ceux des autres dans une ambiance collective conviviale. Les artistes locaux rejoignent le projet et performent en direct.
+<br/>
+
 
 <ResponsiveIframe
   src="https://youtube.com/embed/WCcYfjHkraQ"
@@ -54,9 +58,8 @@ _C’est une création qui s’exprime autant sur la façade que dans la foule :
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[8,9]}  gridSize={2} />
 
+L'oeuvre s'adapte à tous les contextes, du mapping sur batiment historique à la façade de parking - de l'événement ponctuel à l'exposition permanente.
 
-
-_L'oeuvre s'adapte à tous les contextes, du mapping sur batiment historique à la façade de parking - de l'événement ponctuel à l'exposition permanente._
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[10,11,12,13,14, 15]}  gridSize={3} />
 
@@ -75,4 +78,4 @@ _80+ expositions à travers 10 pays_
 - **[Copenhagen Light Festival](//copenhagenlightfestival.org/en/)** <span style={{color:"dimgray"}}> — Copenhague, Danemark, Février 2020</span>
 
 ### Dossier artistique
-Sur demande, [contact@maximetouroute.com](mailto:ontact@maximetouroute.com)
+Sur demande à [contact@maximetouroute.com](mailto:ontact@maximetouroute.com)
