--- a/src/pages/2018-11-30-the-live-drawing-project/index.mdx
+++ b/src/pages/2018-11-30-the-live-drawing-project/index.mdx
@@ -35,12 +35,14 @@ A participatory artwork where the public is invited to draw live on walls. Massi
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[0, 1]} gridSize={2} />
 
-_By leveraging technology to amplify collaborative creation, Let’s Draw reveals our shared imagination around universal themes: How do we draw a tree? How do we draw love? How do we draw our world?_
+By leveraging technology to amplify collaborative creation, Let’s Draw reveals our shared imagination around universal themes: How do we draw a tree? How do we draw love? How do we draw our world?
+<br/>
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[2,3,4,5,6,7]} gridSize={3} />
 
-_A creation that comes alive both on the facade and within the crowd, as participants of all ages draw, react, and engage with their own creations and those of others in a convivial and collective atmosphere.
-Local artists join the project and perform in live._
+A creation that comes alive both on the facade and within the crowd, as participants of all ages draw, react, and engage with their own creations and those of others in a convivial and collective atmosphere.
+Local artists join the project and perform in live.
+<br/>
 
 <ResponsiveIframe
   src="https://youtube.com/embed/WCcYfjHkraQ"
@@ -54,7 +56,8 @@ Local artists join the project and perform in live._
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[8,9]}  gridSize={2} />
 
-_The artwork adapts to all kinds of situations, from heritage building to parking façades - from one-shot events to permanent exhibitions._
+The artwork adapts to all kinds of situations, from heritage building to parking façades - from one-shot events to permanent exhibitions.
+
 
 <ImageGrid props={props.data.mdx.frontmatter.embeddedImagesLocal} indices={[10,11,12,13,14, 15]}  gridSize={3} />
 
@@ -73,4 +76,4 @@ _80+ exhibitions in 10 countries_
 - **[Copenhagen Light Festival](//copenhagenlightfestival.org/en/)** <span style={{color:"dimgray"}}> — Copenhague, Danemark, February 2020</span>
 
 ### Documentation
-Upon request [contact@maximetouroute.com](mailto:ontact@maximetouroute.com)
+Upon request at [contact@maximetouroute.com](mailto:ontact@maximetouroute.com)
