New : body input for livemaker

--- a/src/pages/2023-03-01-live-maker/index.fr.mdx
+++ b/src/pages/2023-03-01-live-maker/index.fr.mdx
@@ -39,7 +39,7 @@ _Live Maker_ est un __logiciel mutualisé__ avec la communauté créative qui pe
 
 ## Caractéristiques
 
-* **Récupération d’interactions en temps réel** : photos, dessins, sons, joystick, accéléromètre.
+* **Récupération d’interactions en temps réel** : photos, dessins, sons, joystick, accéléromètre, corps...
 * **Diffusion de contenus directement sur les smartphones** : vidéo, audio, texte, vibreur, flash.
 * **Aucune application à télécharger** : utilisation via une simple page web, accessible par lien ou QR Code.
 * **Jusqu'à 10,000 personnes en simultané** : qu'elles soient sur place ou réparties dans le monde entier.
@@ -97,7 +97,12 @@ _Liste non exhaustive_
         </div> 
 
          <div style={{width: "33%"}}>
-          
+### Interaction corporelle
+<ResponsiveIframe
+  src="https://youtube.com/embed/slKZ6Tc_eqw"
+  width="1080"
+  height="1920"
+/>
 
         </div> 
 
