--- a/src/pages/2023-03-01-live-maker/index.mdx
+++ b/src/pages/2023-03-01-live-maker/index.mdx
@@ -39,7 +39,7 @@ _Live Maker_ is a **shared software** for the creative community that transforms
 
 ## Features
 
-* **Real-time interaction retrieval**: photos, drawings, sounds, joystick, accelerometer.
+* **Real-time interaction retrieval**: photos, drawings, sounds, joystick, accelerometer, body features...
 * **Direct content broadcasting on smartphones**: video, audio, text, vibrator, flash.
 * **No app download required**: accessible via a simple web page through a link or QR code.
 * **Supports up to 10,000 simultaneous users**: whether onsite or spread across the globe.
@@ -97,7 +97,12 @@ _Non-exhaustive list_
         </div> 
 
          <div style={{width: "33%"}}>
-          
+                    ### Body Input
+<ResponsiveIframe
+  src="https://youtube.com/embed/slKZ6Tc_eqw"
+  width="1080"
+  height="1920"
+/>
 
         </div> 
 
